[FIX] Use getXxxAsHtml getter in templates. [ENHANCE] Add hidehelp attribute on some fields in contact editor and clean unused locales. [FIX] Fix warnings in Eclipse. [CLEAN] Some cleanings.

--- a/templates/dummy.all.all.html
+++ b/templates/dummy.all.all.html
@@ -1,1 +1,1 @@
-<h3 class="title" i18n:translate="&modules.contactcard.bo.general.block.Detail;"/>
+<h3 class="title" change:translate="modules.contactcard.bo.general.block.Detail"></h3>
