[NEW] Add configuration to disable link to detail page.

--- a/templates/Contactcard-Block-Contact-Success.all.all.html
+++ b/templates/Contactcard-Block-Contact-Success.all.all.html
@@ -1,18 +1,29 @@
 <ol class="vcard">
 	<li class="contact-not-published" tal:condition="contactNotPublished" change:translate="modules.contactcard.bo.general.ContactNotPublished"></li>
 	<li class="float-right" tal:condition="configuration/getShowPhoto">
-		<a change:link= "tag contextual_website_website_modules_contactcard_contact ; contactcardParam[cmpref] contact/getId">
+		<a tal:condition="configuration/getShowLinkToDetail" change:link="tag contextual_website_website_modules_contactcard_contact ; contactcardParam[cmpref] contact/getId">
 			<img tal:condition="contact/getLastname" class="fn" change:media="document contact/getPhoto; format 'modules.contactcard.frontoffice/detailvisual'; alt contact/getLastname" />
-		</a>
-		<a change:link= "tag contextual_website_website_modules_contactcard_contact ; contactcardParam[cmpref] contact/getId">
 			<img tal:condition="not: contact/getLastname" class="fn" change:media="document contact/getPhoto; format 'modules.contactcard.frontoffice/detailvisual'; alt contact/getName" />
 		</a>
+		<tal:block tal:condition="not:configuration/getShowLinkToDetail">
+			<img tal:condition="contact/getLastname" class="fn" change:media="document contact/getPhoto; format 'modules.contactcard.frontoffice/detailvisual'; alt contact/getLastname" />
+			<img tal:condition="not: contact/getLastname" class="fn" change:media="document contact/getPhoto; format 'modules.contactcard.frontoffice/detailvisual'; alt contact/getName" />
+		</tal:block>
 	</li>
 	<li>
 		<h4 tal:condition="contact/getLastname" class="fn">
-			<a change:link= "tag contextual_website_website_modules_contactcard_contact ; contactcardParam[cmpref] contact/getId">		
-				<strong><span tal:condition="contact/getTitle" class="honorific-prefix">${contact/getTitle/getLabelAsHtml}</span> <span class="given-name">${contact/getFirstnameAsHtml}</span> <span class="family-name">${contact/getLastnameAsHtml}</span></strong>
+			<a tal:condition="configuration/getShowLinkToDetail" change:link="tag contextual_website_website_modules_contactcard_contact ; contactcardParam[cmpref] contact/getId">		
+				<strong>
+					<span tal:condition="contact/getTitle" class="honorific-prefix">${contact/getTitle/getLabelAsHtml}</span>
+					<span class="given-name">${contact/getFirstnameAsHtml}</span>
+					<span class="family-name">${contact/getLastnameAsHtml}</span>
+				</strong>
 			</a>
+			<strong tal:condition="not:configuration/getShowLinkToDetail">
+				<span tal:condition="contact/getTitle" class="honorific-prefix">${contact/getTitle/getLabelAsHtml}</span>
+				<span class="given-name">${contact/getFirstnameAsHtml}</span>
+				<span class="family-name">${contact/getLastnameAsHtml}</span>
+			</strong>
 		</h4>
 		<h4 tal:condition="not: contact/getLastname" class="org fn">${contact/getNameAsHtml}</h4>	
 	</li>
