--- a/templates/Contactcard-Block-Contact-Success.all.all.html
+++ b/templates/Contactcard-Block-Contact-Success.all.all.html
@@ -73,7 +73,7 @@
 	<li tal:condition="configuration/getShowContactpageLink">
 		<strong tal:content="trans:m.contactcard.frontoffice.contact,ucf,lab"></strong>
 		<span>
-			<a change:link="tag contextual_website_website_modules_contactcard_page-contact ; contactcardParam[cmpref] contact/getId; formParam[receiverIds] contact/getId" class="link email" tal:content="trans:m.contactcard.frontoffice.contactme,ucf"></a> 
+			<a change:link="tag contextual_website_website_modules_contactcard_page-contact ; contactcardParam[cmpref] contact/getId; formParam[receiverIds] contact/getId" class="link" tal:content="trans:m.contactcard.frontoffice.contactme,ucf"></a> 
 		</span>
 	</li>
 </ol>
