--- a/templates/Contactcard-Block-Contact-Success.all.all.html
+++ b/templates/Contactcard-Block-Contact-Success.all.all.html
@@ -1,5 +1,5 @@
 <ol class="vcard">
-	<li class="contact-not-published" tal:condition="contactNotPublished" change:translate="modules.contactcard.bo.general.ContactNotPublished"></li>
+	<li class="contact-not-published" tal:condition="contactNotPublished">${trans:m.contactcard.bo.general.contactnotpublished,ucf}</li>
 	<li class="float-right" tal:condition="configuration/getShowPhoto">
 		<a tal:condition="configuration/getShowLinkToDetail" change:link="tag contextual_website_website_modules_contactcard_contact ; contactcardParam[cmpref] contact/getId">
 			<img tal:condition="contact/getLastname" class="fn" change:media="document contact/getPhoto; format 'modules.contactcard.frontoffice/detailvisual'; alt contact/getLastname" />
@@ -29,33 +29,33 @@
 	</li>
 	<tal:block tal:condition="configuration/getShowCompanyInfos">
 		<li tal:condition="php: contact.getName() && contact.getLastname()">
-			<strong change:translate="modules.contactcard.frontoffice.OfficeLabel"></strong>
+			<strong>${trans:m.contactcard.frontoffice.office,ucf,lab}</strong>
 			<span class="org">${contact/getNameAsHtml}</span>
 		</li>
 		<li tal:condition="contact/getFunction">
-			<strong change:translate="modules.contactcard.frontoffice.FunctionLabel"></strong>
+			<strong>${trans:m.contactcard.frontoffice.function,ucf,lab}</strong>
 			<span class="title">${contact/getFunctionAsHtml}</span>
 		</li>
 	</tal:block>	
 	<tal:block tal:condition="configuration/getShowTelephoneNumber">
 		<li tal:condition="contact/getPhone" class="tel">
-			<strong change:translate="modules.contactcard.frontoffice.PhoneLabel"></strong>
+			<strong>${trans:m.contactcard.frontoffice.phone,ucf,lab}</strong>
 			<span class="type display-none">work</span>
 			<span class="value">${contact/getPhoneAsHtml}</span>
 		</li>
 		<li tal:condition="contact/getPost">
-			<strong change:translate="modules.contactcard.frontoffice.PostLabel"></strong>
+			<strong>${trans:m.contactcard.frontoffice.post,ucf,lab}</strong>
 			${contact/getPostAsHtml}
 		</li>
 		<li tal:condition="contact/getFax" class="tel">
-			<strong change:translate="modules.contactcard.frontoffice.FaxLabel"></strong>
+			<strong>${trans:m.contactcard.frontoffice.fax,ucf,lab}</strong>
 			<span class="type display-none">fax</span>
 			<span class="value">${contact/getFaxAsHtml}</span>
 		</li>
 	</tal:block>
 	<tal:block tal:condition="configuration/getShowAddress">
 		<li tal:condition="contact/hasAddressInformations" class="address adr">
-			<strong change:translate="modules.contactcard.frontoffice.AddressLabel"></strong>
+			<strong>${trans:m.contactcard.frontoffice.address,ucf,lab}</strong>
 			<ul>
 				<li class="street-address">
 					${contact/getAddress1AsHtml}
@@ -64,16 +64,16 @@
 						${contact/getAddress2AsHtml}
 					</tal:block>
 				</li>
-				<li tal:condition="contact/getZipcode" class="display-inline postal-code" tal:content="contact/getZipcodeAsHtml"/>
-				<li tal:condition="contact/getCity" class="display-inline locality" tal:content="contact/getCityAsHtml"/>
-				<li tal:condition="contact/getCountry" class="country-name" tal:content="contact/getCountryAsHtml"/>
+				<li tal:condition="contact/getZipcode" class="display-inline postal-code">${contact/getZipcodeAsHtml}</li>
+				<li tal:condition="contact/getCity" class="display-inline locality">${contact/getCityAsHtml}</li>
+				<li tal:condition="contact/getCountry" class="country-name">${contact/getCountryAsHtml}</li>
 			</ul>
 		</li>
 	</tal:block>
 	<li tal:condition="configuration/getShowContactpageLink">
-		<strong change:translate="modules.contactcard.frontoffice.ContactLabel"></strong>
+		<strong>${trans:m.contactcard.frontoffice.contact,ucf,lab}</strong>
 		<span>
-			<a change:link="tag contextual_website_website_modules_contactcard_page-contact ; contactcardParam[cmpref] contact/getId; formParam[receiverIds] contact/getId" class="link email" change:translate="modules.contactcard.frontoffice.Contactme"></a> 
+			<a change:link="tag contextual_website_website_modules_contactcard_page-contact ; contactcardParam[cmpref] contact/getId; formParam[receiverIds] contact/getId" class="link email">${trans:m.contactcard.frontoffice.contactme,ucf}</a> 
 		</span>
 	</li>
 </ol>
