--- a/templates/Contactcard-Block-Contact-Success.all.all.html
+++ b/templates/Contactcard-Block-Contact-Success.all.all.html
@@ -52,6 +52,12 @@
 			<span class="type display-none">fax</span>
 			<span class="value">${contact/getFaxAsHtml}</span>
 		</li>
+		<li tal:condition="contact/getWebsiteurl" class="website">
+			<strong>${trans:m.contactcard.frontoffice.website,ucf,lab}</strong>
+			<span class="type display-none">website</span>
+			<a href="${contact/getWebsiteurl}" class="link">${contact/getWebsiteurl}</a>
+		</li>
+		
 	</tal:block>
 	<tal:block tal:condition="configuration/getShowAddress">
 		<li tal:condition="contact/hasAddressInformations" class="address adr">
@@ -71,9 +77,12 @@
 		</li>
 	</tal:block>
 	<li tal:condition="configuration/getShowContactpageLink">
+		<tal:block tal:condition="contact/getAllowcontact">
 		<strong>${trans:m.contactcard.frontoffice.contact,ucf,lab}</strong>
-		<span>
-			<a change:link="tag contextual_website_website_modules_contactcard_page-contact ; contactcardParam[cmpref] contact/getId; formParam[receiverIds] contact/getId" class="link email">${trans:m.contactcard.frontoffice.contactme,ucf}</a> 
-		</span>
+			<span>
+				<a tal:condition="not: contact/getContactpage" change:link="tag contextual_website_website_modules_contactcard_page-contact ; contactcardParam[cmpref] contact/getId; formParam[receiverIds] contact/getId" class="link email">${trans:m.contactcard.frontoffice.contactme,ucf}</a> 
+				<a tal:condition="contact/getContactpage" change:link="document contact/getContactpage" class="link email">${trans:m.contactcard.frontoffice.contactme,ucf}</a> 
+			</span>
+		</tal:block>
 	</li>
 </ol>
