[FIX] Migrate templates.

--- a/templates/Contactcard-Block-Contact-Success.all.all.html
+++ b/templates/Contactcard-Block-Contact-Success.all.all.html
@@ -69,9 +69,9 @@
 						${structure contact/getAddress2AsHtml}
 					</tal:block>
 				</li>
-				<li tal:condition="contact/getZipcode" class="display-inline postal-code">${contact/getZipcodeAsHtml}</li>
-				<li tal:condition="contact/getCity" class="display-inline locality">${contact/getCityAsHtml}</li>
-				<li tal:condition="contact/getCountry" class="country-name">${contact/getCountryAsHtml}</li>
+				<li tal:condition="contact/getZipcode" class="display-inline postal-code">${contact/getZipcode}</li>
+				<li tal:condition="contact/getCity" class="display-inline locality">${contact/getCity}</li>
+				<li tal:condition="contact/getCountry" class="country-name">${contact/getCountry}</li>
 			</ul>
 		</li>
 	</tal:block>
